# engineering-lab

./: .env.example  .gitignore  LICENSE  README.md
agent-alignment-framework/: .gitignore  FRAMEWORK_GUARANTEES.md  LICENSE  README.md  pyproject.toml
agent-alignment-framework/agent_alignment/: __init__.py
agent-alignment-framework/agent_alignment/config/: __init__.py  loader.py  settings.py
agent-alignment-framework/agent_alignment/core/: __init__.py  agent.py  evaluator.py  hitl.py  models.py  resolution.py
agent-alignment-framework/agent_alignment/llm/: __init__.py  client.py  providers.py
agent-alignment-framework/agent_alignment/utils/: __init__.py  logging.py  validation.py
agent-alignment-framework/docs/: adding-a-new-use-case.md  architecture.md  human-in-the-loop.md  positioning.md  testing.md
agent-alignment-framework/examples/: __init__.py  demo_hitl_escalation.py  example_usage.py  simple_hitl_demo.py
agent-alignment-framework/examples/compatibility/: __init__.py  agents.py  demo.py  evaluator.py  test_integration.py
agent-alignment-framework/examples/compatibility/prompts/: advocate.txt  judge.txt  skeptic.txt
agent-alignment-framework/examples/demo/prompts/: advocate.txt  judge.txt  skeptic.txt
agent-alignment-framework/scripts/: live_llm_smoke_test.py  run_tests.py
agent-alignment-framework/tests/: __init__.py  test_framework_validation.py
agent-alignment-framework/tests/test_core/: __init__.py  test_models.py
agent-alignment-ui/: README.md  test_backend.py
agent-alignment-ui/backend/: main.py  requirements.txt
agent-alignment-ui/docs/: evaluation-history.md
agent-alignment-ui/frontend/: package-lock.json  package.json  tsconfig.json
agent-alignment-ui/frontend/public/: index.html  manifest.json
agent-alignment-ui/frontend/src/: App.tsx
agent-alignment-ui/frontend/src/components/: APIKeyManager.tsx  AgentDecisionCard.tsx  AlignmentAnalysis.tsx  HITLEscalationAlert.tsx  Header.tsx  Sidebar.tsx
agent-alignment-ui/frontend/src/pages/: Dashboard.tsx  EvaluationPage.tsx  HITLPage.tsx  HistoryPage.tsx
agent-alignment-ui/tests/: README.md  test_display_format.py  test_frontend_runtime.py  test_shared_env_integration.py  test_system_integration.py
llm-service/: .gitignore  README.md  requirements.txt  test_logging.py  test_providers.py  ui-config.json.example
llm-service/scripts/: validate_compatibility.py  validate_service.py
llm-service/src/: api.py  auth.py  client.py  config.py  dependencies.py  llm_errors.py  logging_config.py  logging_middleware.py  run.py
llm-service/src/compatibility/: models.py  prompt.py  router.py  service.py
llm-service/src/compatibility/agents/: __init__.py  advocate.py  base.py  judge.py  skeptic.py
llm-service/templates/: index.html
(+8 files in other folders)
